--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,7 @@ body{
     top:0;
     left:0;
     width:100%;
-    height:80px;
+    height:60px;
     background-color:rgba(64,64,64,0.85);//#404040
     /*        -webkit-box-shadow:0 8px 6px -6px #000;
             -moz-box-shadow:0 8px 6px -6px #000;
@@ -238,7 +238,8 @@ nav{
 /*intro BEGIN*/
 .intro-static{
     position: relative;
-    background-image: url(../images/apple-bg.jpg);
+    background-color: rgba(0,0,0,0.4);
+    background-image: url(../images/background/background_2.png);
     background-size: cover;
 }
 /*#intro-name{
@@ -965,7 +966,7 @@ form input[type=text], #messageArea{
 }
 @media screen and (max-width: 960px){
     .navigation {
-        height:60px;
+        height:40px;
         margin-top: -60px;
     }
     #initial-and-name {
