--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,11 @@
     src: url("../fonts/SF-Burlington-Script/SF_Burlington_Script_Italic.ttf");
     font-weight: 100; 
 }
+@font-face{
+    font-family: "DEF";
+    src: url("../fonts/SeasideResortNF/SEASRN__.ttf");
+    font-weight: 100; 
+}
 @-webkit-keyframes menu-glow{
     0%{
         text-shadow: none;
@@ -156,7 +161,7 @@ body{
     left:0;
     width:100%;
     height:80px;
-    background-color:rgba(64,64,64,0.85);//#404040
+    background-color:red//#404040
     /*        -webkit-box-shadow:0 8px 6px -6px #000;
             -moz-box-shadow:0 8px 6px -6px #000;
             box-shadow:0 8px 6px -6px #ccc;*/
@@ -172,7 +177,7 @@ body{
 }
 #initial-and-name {
     display:inline-block;
-    font-family:'Lato',sans-serif;
+    font-family:"DEF","Open Sans",sans-serif;
     font-weight:400;
     width:420px;
     height:inherit;
@@ -200,7 +205,7 @@ body{
     left:0;
     line-height:80px;
     vertical-align:middle;
-    background-color:#888;
+    background-color:bottom;
     font-family:'Gochi Hand',cursive;
     font-size:1.5em;
 }
@@ -227,14 +232,16 @@ body{
     top:0;
     left:120px;
     text-align:center;
-    width:350px;
+    width:300px;
     /*        color:#404040;*/
 }
 nav{
     z-index: 10;
 }
 /*    navbar END*/
-
+#logo-main{
+    opacity: 0;
+}
 /*intro BEGIN*/
 .intro-static{
     position: relative;
@@ -965,8 +972,8 @@ form input[type=text], #messageArea{
 }
 @media screen and (max-width: 960px){
     .navigation {
-        height:60px;
-        margin-top: -60px;
+        height:10px;
+        margin-top: 10px;
     }
     #initial-and-name {
         width:360px;
